# cortex

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  AGENTS.zh-tw.md  CLAUDE.md  Cargo.toml  README.jp.md  README.md  README.zh-tw.md  SPEC_RAG-embedded-reranking.zh-tw.md  SPEC_project-management-redesign.zh-tw.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  scratch.rs
.eiva/models/: run-embedded.sh  run-reranking.sh
backend/: .env.example  Cargo.toml
backend/assets/: env.js  index.html
backend/assets/assets/: ScreenDesignerPage-8kjU89sE.js  ScreenDesignerPage-C9G9G-G5.js  WorkflowDesignerPage-BoyVSPim.js  WorkflowDesignerPage-BrCALzXi.js  WorkflowDesignerPage-CA7Xa74O.js  WorkflowDesignerPage-DNrZAqFF.css  WorkflowDesignerPage-TD8W4wC0.css  WorkflowDesignerPage-XGg3AihO.js  index-5987pH7S.js  index-B4jgkkki.css  index-BYZ1CiIS.js  index-BZDD0CNz.js  index-BhFrgmG8.js  index-BoEbUKsK.css  index-Bp81dIWq.css  index-C2YcXCPk.css  index-COBxU9il.js  index-D1JS9GRU.js  index-DIGpnVPS.js  index-DJgr4mEw.css  index-DR2E0GlX.js  index-D_ryt3bo.css  index-Dhtuh-ou.js  index-Dp2MWtXl.js  index-Dt-vF7TX.css  index-GEG4-0bt.css  index-Imb685lt.js  index-PVsPmbt5.css  index-n_bIhOiZ.css  index-pGI4vK2P.css  style-BA5PERmi.js  style-DLuuM7rS.js
backend/package/pageindex-rs/: .gitignore  Cargo.toml  IDEAS.md  PORTING.md  README.md
backend/package/pageindex-rs/crates/pageindex-cli/: Cargo.toml  README.md
backend/package/pageindex-rs/crates/pageindex-cli/src/: main.rs
backend/package/pageindex-rs/crates/pageindex-core/: Cargo.toml  README.md
backend/package/pageindex-rs/crates/pageindex-core/src/: config.rs  error.rs  lib.rs  pipeline.rs
backend/package/pageindex-rs/crates/pageindex-core/src/llm/: json_extract.rs  mod.rs  prompts.rs
backend/package/pageindex-rs/crates/pageindex-core/src/markdown/: mod.rs
backend/package/pageindex-rs/crates/pageindex-core/src/model/: mod.rs
backend/package/pageindex-rs/crates/pageindex-core/src/pdf/: mod.rs
backend/package/pageindex-rs/crates/pageindex-core/src/toc/: detection.rs  extraction.rs  fixing.rs  mod.rs  verification.rs
backend/package/pageindex-rs/crates/pageindex-core/src/tree/: mod.rs
backend/package/pageindex-rs/crates/pageindex-llm/: Cargo.toml  README.md
backend/package/pageindex-rs/crates/pageindex-llm/src/: anthropic.rs  azure.rs  gemini.rs  groq.rs  lib.rs  mock.rs  ollama.rs  openai.rs
backend/package/pageindex-rs/crates/pageindex-mcp/: Cargo.toml  README.md
backend/package/pageindex-rs/crates/pageindex-mcp/src/: main.rs
backend/package/pageindex-rs/crates/pageindex-store/: Cargo.toml  README.md
backend/package/pageindex-rs/crates/pageindex-store/src/: cache.rs  error.rs  json_store.rs  lib.rs  sqlite_store.rs  store.rs  watcher.rs
backend/src/: main.rs
backend/src/api/: admin.rs  auth.rs  chat.rs  codex.rs  collaboration.rs  content.rs  dashboard.rs  departments.rs  documents.rs  graph.rs  health.rs  indexing.rs  knowledge.rs  mod.rs  projects.rs  rag.rs  research.rs  router.rs  settings.rs  system_admin.rs  workflows.rs
backend/src/config/: mod.rs
backend/src/core/: state.rs
backend/src/db/: mod.rs
backend/src/db/repository/: document_repo.rs  mod.rs
backend/src/errors/: mod.rs
backend/src/gsuite/: mod.rs
backend/src/i18n/: mod.rs
backend/src/ingestion/: mod.rs  parser.rs  to_markdown.rs
backend/src/logging/: mod.rs
backend/src/markdown/: converter.rs  editor.rs  mod.rs
backend/src/middleware/: error_handler.rs
backend/src/models/: document.rs  user.rs
backend/src/monitoring/: metrics.rs
backend/src/office/: excel.rs  mod.rs  powerpoint.rs  word.rs
backend/src/rag/: chunker.rs  embeddings.rs  llm.rs  mod.rs  pageindex_client.rs  reranker.rs
backend/src/security/: middleware.rs
backend/src/webdav/: mod.rs
frontend/: .eslintrc.cjs  fix_ts_dept.py  header_announcements.txt  header_directory.txt  header_following.txt  header_memos.txt  header_phone.txt  header_points.txt  header_projects.txt  header_review.txt  header_settings.txt  header_status.txt  header_tasks.txt  index.html  package-lock.json  package.json  patch_dept_i18n.py  patch_i18n.py  patch_layout.py  replace_headers.py  tailwind.config.js  tsconfig.json  update_i18n.py  update_imports.py  update_relative_imports.py  vite.config.ts
frontend/public/: env.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BottomToolArea.tsx  ContextPanel.tsx  DirectoryBrowser.tsx  Layout.tsx  SystemJobsTabs.tsx  TopQuickActions.tsx
frontend/src/config/: departments.ts  env.ts  systemAdminEntities.ts  workflowI18n.ts
frontend/src/docs/: user-guide.en.md  user-guide.zh-TW.md
frontend/src/grpc/: codexWsClient.ts  documentWsClient.ts  indexingWsClient.ts
frontend/src/hooks/: useDocuments.ts
frontend/src/i18n/: en.json  index.ts  zh-TW.json
frontend/src/lib/: navConfig.ts
frontend/src/pages/: AiDocumentQueryPage.tsx  AiManagementSettingsPage.tsx  AiModelsPage.tsx  ChatHistoryPage.tsx  ChatPage.tsx  CollaborationPage.tsx  CommonFeaturesPage.tsx  ContentManagementPage.tsx  DashboardActivityPage.tsx  DashboardHealthPage.tsx  DashboardPage.tsx  DeepResearchPage.tsx  DepartmentPortalPage.tsx  DocumentDetailPage.tsx  DocumentListPage.tsx  DocumentsPage.tsx  EnterpriseSystemsPage.tsx  GraphCommunityPage.tsx  GraphIsolatedPage.tsx  HrPortalPage.tsx  IndexingPage.tsx  KnowledgeCategoriesPage.tsx  KnowledgeCenterPage.tsx  KnowledgeGraphPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OrgManagementPage.tsx  PersonalWorkspacePage.tsx  ProjectManagementPage.tsx  RecentDocumentsPage.tsx  ResearchHistoryPage.tsx  ResearchPanel.tsx  ScreenDesignerPage.tsx  SearchHybridPage.tsx  SearchPage.tsx  SettingsPage.tsx  SettingsSystemPage.tsx  SystemAdministrationPage.tsx  (+2 more)
kubernetes/: backend-deployment.yaml  cortex-ingress.yaml  cortex-secrets.yaml  frontend-deployment.yaml
run/: run-make.sh
run/container/: Makefile  README.md
run/kubernetes/: README.md  frontend-deployment.yaml  qdrant-deployment.yaml
~docs/spec/: indexer-graphify-gitnexus.md  pageindex-rs.md
(+130 files in other folders)
