[package]
name = "cortex-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.74", features = ["full"] }
salvo-extra = "0.74"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "mssql", "uuid", "chrono", "migrate"] }
qdrant-client = "1.12"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tantivy = "0.22"
pdf-extract = "0.7"
lopdf = "0.34"
calamine = "0.26"
rust_xlsxwriter = "0.78"
pulldown-cmark = "0.12"
comrak = "0.29"
argon2 = "0.5"
jsonwebtoken = "9"
oauth2 = "5"
zip = "2"
cortex-lib = { path = "../lib/rust" }
eiva-be-sso = { path = "../lib/rust/sso" }

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
mssql = ["sqlx/mssql"]
